--- a/odia.css
+++ b/odia.css
@@ -28,47 +28,47 @@ footer {
   margin-top: 1rem;
 }
 
-.wajah {
+.balika {
 background-image: url("sounds/odia/balikabadhu.jpeg");
 background-size:cover;
 }
 
-.kabhi {
+.chatichirideletu {
 background-image: url("sounds/odia/chatichirideletu.jpeg");
 background-size: cover;
 }
 
-.cmyn {
+.janamadeinusina {
 background-image: url("sounds/odia/janamadeinusina.jpg");
 background-size:cover;
 }
 
-.ekdin{
+.kulanandana{
 background-image: url("sounds/odia/kulanandanaa.jpeg");
 background-size:cover;
 }
 
-.haledil {
+.maasinagae {
 background-image: url("sounds/odia/maasinagae.jpg");
 background-size: cover;
 }
 
-.butterfly {
+.moakhiretupalaka {
 background-image: url("sounds/odia/moakhiretupalaka.jpeg");
 background-size: cover;
 }
 
-.tumhiho {
+.sunapanjuri {
 background-image: url("sounds/odia/sunapanjuri.jpeg");
 background-size: cover;
 }
 
-.burj {
+.tumoakhira {
   background-image: url("sounds/odia/tumoakhira.jpg");
   background-size: cover;
 }
 
-.laapata{
+.tuthile{
   background-image: url("sounds/odia/tuthile.jpeg");
   background-size: cover;
 }
