--- a/hindi.css
+++ b/hindi.css
@@ -29,47 +29,47 @@ footer {
 }
 
 .wajah {
-background-image: url("sounds/hindii/aksarisduniyamein.jpeg");
+background-image: url("aksarisduniyamein.jpeg");
 background-size:cover;
 }
 
 .kabhi {
-background-image: url("sounds/hindii/dheeredheerese.jpg");
+background-image: url("dheeredheerese.jpg");
 background-size: cover;
 }
 
 .cmyn {
-background-image: url("sounds/hindii/dilkarishta.jpeg");
+background-image: url("dilkarishta.jpeg");
 background-size:cover;
 }
 
 .ekdin{
-background-image: url("sounds/hindii/dillagaliya.jpeg");
+background-image: url("dillagaliya.jpeg");
 background-size:cover;
 }
 
 .haledil {
-background-image: url("sounds/hindii/hameintumsehuahaipyaar.jpg");
+background-image: url("hameintumsehuahaipyaar.jpg");
 background-size: cover;
 }
 
 .butterfly {
-background-image: url("sounds/hindii/kisikimuskurahaton.jpg");
+background-image: url("kisikimuskurahaton.jpg");
 background-size: cover;
 }
 
 .tumhiho {
-background-image: url("sounds/hindii/bepanah.jfif");
+background-image: url("bepanah.jfif");
 background-size: cover;
 }
 
 .burj {
-  background-image: url("sounds/hindii/mohabbatdilkasukoon.jpeg");
+  background-image: url("mohabbatdilkasukoon.jpeg");
   background-size: cover;
 }
 
 .laapata{
-  background-image: url("sounds/hindii/mainduniyabhuladunga.jpg");
+  background-image: url("mainduniyabhuladunga.jpg");
   background-size: cover;
 }
 .set {
