--- a/odia.css
+++ b/odia.css
@@ -29,47 +29,47 @@ footer {
 }
 
 .balika {
-background-image: url("sounds/odia/balikabadhu.jpeg");
+background-image: url("balikabadhu.jpeg");
 background-size:cover;
 }
 
 .chatichirideletu {
-background-image: url("sounds/odia/chatichirideletu.jpeg");
+background-image: url("chatichirideletu.jpeg");
 background-size: cover;
 }
 
 .janamadeinusina {
-background-image: url("sounds/odia/janamadeinusina.jpg");
+background-image: url("janamadeinusina.jpg");
 background-size:cover;
 }
 
 .kulanandana{
-background-image: url("sounds/odia/kulanandanaa.jpeg");
+background-image: url("kulanandanaa.jpeg");
 background-size:cover;
 }
 
 .maasinagae {
-background-image: url("sounds/odia/maasinagae.jpg");
+background-image: url("maasinagae.jpg");
 background-size: cover;
 }
 
 .moakhiretupalaka {
-background-image: url("sounds/odia/moakhiretupalaka.jpeg");
+background-image: url("moakhiretupalaka.jpeg");
 background-size: cover;
 }
 
 .sunapanjuri {
-background-image: url("sounds/odia/sunapanjuri.jpeg");
+background-image: url("sunapanjuri.jpeg");
 background-size: cover;
 }
 
 .tumoakhira {
-  background-image: url("sounds/odia/tumoakhira.jpg");
+  background-image: url("tumoakhira.jpg");
   background-size: cover;
 }
 
 .tuthile{
-  background-image: url("sounds/odia/tuthile.jpeg");
+  background-image: url("tuthile.jpeg");
   background-size: cover;
 }
 .set {
